--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -24,3 +24,19 @@ body {
   justify-content: space-around;
 
 }
+
+path:hover {
+  fill: orange;
+}
+
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    width: auto;
+    height: auto;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: #fff;
+    border: 0px;
+    pointer-events: none;
+}
